<resources>
    <string name="app_name">PAC Sport</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="txt_link_no_account">No account? Create a new one.</string>
    <string name="txt_title_register">BECOME OUR MEMBER TODAY!</string>
    <string name="btn_register">Sign up</string>
    <string name="img_player_description">Player Image</string>
    <string name="txtview_player_info">INFORMATION</string>
    <string name="txtview_birthday">Birthday:</string>
    <string name="txtview_birth_place">Birth Place:</string>
    <string name="txtview_player_height">Height:</string>
    <string name="txtview_player_weight">Weight:</string>
    <string name="txtview_player_team">Team:</string>
    <string name="txtview_player_name">Kevin Love</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_API_key">AIzaSyCB-Z1UehTwRJgp5qURiLyGkAtEhne7ISY</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="default_score">0</string>
    <string name="default_team">Team Name</string>
    <string name="nba_league">NBA</string>
    <string name="nhl_league">NHL</string>
    <string name="mlb_league">MLB</string>
    <string name="lastUpdatedOn">Last update on:</string>
    <string name="txtTitleEvents">Events</string>
    <string name="txtView_hello_user_name">Hello User Name</string>
    <string name="txtView_event_calendar">Event Calendar</string>
    <string name="txtView_calendar_event_information">Event Information</string>
    <string name="txtView_favorite_team_toolbar">Favorite Team</string>

    <string-array name="leagues_array">
        <item>NBA</item>
        <item>NHL</item>
        <item>MLB</item>
    </string-array>

</resources>
