<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70FFFFFF"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/lastUpdatedOn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/widget_away_logo"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/pac_sport_logo" />

        <TextView
            android:id="@+id/widget_away_score"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical|end"
            android:padding="4dp"
            android:text="@string/default_score"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widget_vs"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:padding="10dp"
            android:text="-"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widget_home_score"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical|start"
            android:padding="4dp"
            android:text="@string/default_score"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/widget_home_logo"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/pac_sport_logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/widget_away_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center|left"
            android:padding="4dp"
            android:text="@string/default_team"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:padding="4dp"
            android:text="vs"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/widget_home_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center|right"
            android:padding="4dp"
            android:text="@string/default_team"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>